--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ box-shadow: 0px 20px 20px rgb(188, 188, 188);
     align-items: center;
     gap: 200px;
 }
+.zet{
+    width: 20%;
+}
 .HeaderBottom{
     margin-top: 50px;
 width: 100%;
@@ -48,17 +51,20 @@ h1{
     padding-top: 30px;
 }
 .social{
-    padding-top: 30px;
+    width: 40%;
+    margin: auto;
+    padding-top: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    border-bottom: 2px solid black;
 }
 .CV{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 .but{
 width: 70%;
@@ -69,6 +75,78 @@ background: #ff660094;
 box-shadow: 0px 0px 50px 0px #ff6600be;
 color: white;
 text-transform: uppercase;
+}
+.AboutT{
+    width: 50%;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    padding-top: 80px;
+    border-bottom: 2px solid black;
+}
+.AboutB{
+    width: 80%;
+    margin: auto;
+line-height: 1.6;
+text-align: justify;
+padding-top: 30px;
 
+}
+.Special{
+    width: 50%;
+    padding-left: 20px;
+    border-bottom: 2px solid black;
+    padding-top: 50px;
+}
+.SpecBox{
+    width: 80%;
+    margin: auto;
+    padding-top: 10px;
+    line-height: 2;
+   
+}
+.Spec{
+    display: flex;
+    align-items: center;
+    line-height: 2;
+    gap: 20px;
+    padding-top: 20px;
+}
+.MySkills{
+    width: 70%;
+    padding-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin: auto;
+    gap: 20px;
+}
 
+.Skill{
+    width: 70px;
+    height: 70px;
+    border-radius: 50px;
+    border: 6px solid orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.s3{
+    border: 6px solid gray;
+}
+.Body{
+    margin-top: 50px;
+    
+}
+.PBOX{
+    width: 80%;
+    height: 300px;
+    background: linear-gradient(to right, orange, rgb(255, 230, 0), orange);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(255, 166, 0, 0.573);
 }
