--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     box-sizing: border-box;
 }
-
+body{
+    position: relative;
+}
 .header{
     width: 100%;
     height: 70px;
@@ -12,6 +14,8 @@ box-shadow: 0px 20px 20px rgb(188, 188, 188);
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: sticky;
+    top: 0;
 }
 .HeaderInto{
     display: flex;
@@ -114,11 +118,17 @@ padding-top: 30px;
     gap: 20px;
     padding-top: 20px;
 }
+.Bodier{
+    width: 100%;
+    background: linear-gradient(to bottom, rgb(18, 18, 18),gray, rgb(7, 7, 7));
+    margin-top: 20px;
+    box-shadow: 0 0 20px black;
+}
 .MySkills{
-    width: 70%;
+    width: 80%;
     padding-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
+    display: flex;
+    flex-wrap: wrap;
     margin: auto;
     gap: 20px;
 }
@@ -137,16 +147,105 @@ padding-top: 30px;
 }
 .Body{
     margin-top: 50px;
-    
+    width: 100%;
 }
 .PBOX{
-    width: 80%;
+    width: 90%;
     height: 300px;
-    background: linear-gradient(to right, orange, rgb(255, 230, 0), orange);
+    background: radial-gradient(circle, orange, rgb(0, 0, 0), orange);
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
     border-radius: 20px;
     box-shadow: 0 0 30px rgba(255, 166, 0, 0.573);
+}
+.footer{
+    width: 90%;
+    height: 500px;
+    margin: auto;
+
+}
+.ContactME {
+   width: 100%;
+   margin-top: 50px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   color: white;
+}
+.input{
+    width: 100%;
+    height: 40px;
+    padding-left: 20px;
+    border-radius: 20px;
+    margin-top: 10px;
+    border: 1.5px solid #FF6600;
+background: #ff660094;
+color: white;
+}
+input::placeholder{
+
+    color: white;
+}
+.text1{
+height: 200px;
+resize: none;
+}
+textarea::placeholder{
+    color: white;
+}
+.send{
+    margin-top: 20px;
+    width: 50%;
+    height: 30px;
+    border-radius: 5px;
+    color: black;
+    font-weight: bolder;
+border: 1.5px solid #FF6600;
+background: white;
+    text-transform: uppercase;
+}
+.footerbottom{
+    width: 100%;
+    background-color: rgba(12, 12, 12, 0.875);
+}
+.zet2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+
+}
+.services{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    gap: 30px;
+    padding-top: 20px;
+
+}
+.mail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding-top: 50px;
+    gap: 10px;
+}
+.line{
+    width: 90%;
+    margin: auto;
+    border: 1px solid whitesmoke;
+    margin-top: 50px;
+}
+.end{
+    color: gray;
+    text-align: end;
+    padding-right: 20px;
+    padding-top: 40px;
 }
