--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ padding-top: 30px;
     width: 80%;
     padding-top: 30px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     margin: auto;
     gap: 20px;
@@ -168,19 +169,19 @@ padding-top: 30px;
 }
 .ContactME {
    width: 100%;
-   margin-top: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
-   flex-direction: column;
+   flex-wrap: wrap;
    color: white;
+   gap: 10px;
+   margin-top: 10px;
 }
 .input{
-    width: 100%;
+    width: 300px;
     height: 40px;
     padding-left: 20px;
     border-radius: 20px;
-    margin-top: 10px;
     border: 1.5px solid #FF6600;
 background: #ff660094;
 color: white;
@@ -196,9 +197,15 @@ resize: none;
 textarea::placeholder{
     color: white;
 }
+.button{
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
 .send{
     margin-top: 20px;
-    width: 50%;
+    width: 200px;
     height: 30px;
     border-radius: 5px;
     color: black;
@@ -210,6 +217,7 @@ background: white;
 .footerbottom{
     width: 100%;
     background-color: rgba(12, 12, 12, 0.875);
+    margin-top: 50px;
 }
 .zet2{
     width: 100%;
