--- a/style.css
+++ b/style.css
@@ -152,10 +152,16 @@ h1 {
 }
 .Body {
   margin-top: 50px;
-  width: 100%;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
+  gap: 30px;
+  overflow: hidden;
 }
 .PBOX {
-  width: 90%;
+  width: 400px;
   height: 300px;
   background: radial-gradient(circle, orange, rgb(0, 0, 0), orange);
   display: flex;
@@ -164,6 +170,9 @@ h1 {
   margin: auto;
   border-radius: 20px;
   box-shadow: 0 0 30px rgba(255, 166, 0, 0.573);
+}
+.p2 , .p3{
+  display: none;
 }
 .footer {
   width: 90%;
@@ -296,18 +305,34 @@ textarea::placeholder {
     display: flex;
     justify-content: start;
 }
+
+.Body {
+  margin-top: 50px;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
+  gap: 30px;
+  overflow: hidden;
+}
 .text{
     width: 700px;
     font-size: 20px;
     border-radius: 0 200px 0 200px;
     background-color: rgba(255, 166, 0, 0.364);
     height: 330px;
-  background: #ff660094;
-  box-shadow: 0px 0px 50px  #ff6600;
+  background: linear-gradient(to bottom , red , white , green );
+  box-shadow: 0px 0px 50px  black;
 }
 .social{
     padding-top: 40px;
 }
+
+.p2 , .p3{
+  display: flex;
+}
+
 .SpecBox {
 display: flex;
 flex-wrap: wrap;
@@ -344,6 +369,7 @@ img:hover{
 }
 body{
     position: relative;
+  
 
 }
 .header{
