--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .header {
   width: 100%;
   height: 70px;
-  background: #141414;
+  background: #0e161e;
   box-shadow: 0px 20px 20px rgb(188, 188, 188);
   display: flex;
   justify-content: space-around;
